--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_svg: ^2.0.7
   font_awesome_flutter: ^10.5.0
 
+
+  #responsive
+  flutter_screenutil: ^5.8.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
